ready for google

--- a/hello.html
+++ b/hello.html
@@ -10,17 +10,19 @@
       <div class="mainContainer">
       <div class="addAlerts">
         <h3>Avaible alerts</h3>
-        <ul id="notaddedalerts">
+        <ul id="notaddedalerts" class="list">
         </ul>
       </div>
       <div>
         <h3>Your alerts</h3>
-        <ul id="addedallerts">
+        <ul id="addedallerts" class="list">
 
         </ul>
       </div>
       </div>
       <button id="savechangesbutton" class="saveButton">save Changes</button>
+      <h3>911 dispatchers should have no Zone as well as their areas selected</h3>
+      <image src="/images/AllegianceLogo.png"/>
     </div>
     </div>
     <script src="popup/popup.js"></script>
